#4
- `FilesTableView` shows only audio files (i.e., mp3s)